# PySnips

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg  setup.py  tox.ini
src/PySnips/: __init__.py  constants.py  io.py  lode.py  plotting.py  potentials.py  regression.py  statistics.py
tests/: test_statistics.py
