[metadata]
name = PySnips
version = attr:PySnips.__version__
description = Python code snippets and little algorithms for daily work
long_description = file: README.md
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
url = https://github.com/PicoCentauri/pysnips
author = attr:PySnips.__author__
author_email = philip.loche@epfl.ch

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

python_requires = >=3.6

project_urls =
    Bug Reports = https://github.com/PicoCentauri/pysnipsissues
    Source = https://github.com/PicoCentauri/pysnips

[options]
package_dir=
    =src
packages = find:

install_requires =
    Matplotlib
    MDAnalysis
    mpltex
    numpy
    sklearn
    scipy
    tqdm

[options.packages.find]
where=src

[options.extras_require]
dev =
    check-manifest
    flake8
    isort

test =
    pytest

[bdist_wheel]
universal=1
